--- a/index.html
+++ b/index.html
@@ -64,13 +64,17 @@
         <h1>Compiled Activities</h1>
 
         <ol>
-            <li><a href="file:///C:/Users/Acer/Desktop/MY%20FILES/Diaz%20%20Kenneth%20Paul%20M/act1DIAZ.html">Activity 1</a>:  Personal Information.</li>
-            <li><a href="file:///C:/Users/Acer/Desktop/MY%20FILES/Diaz%20%20Kenneth%20Paul%20M/act2DIAZ.html">Activity 2</a>:  Curriculum Vitae .</li>
-            <li><a href="file:///C:/Users/Acer/Desktop/MY%20FILES/Diaz%20%20Kenneth%20Paul%20M/act3DIAZ.html">Activity 3</a>:  HTML Tutorial.</li>
-            <li><a href="file:///C:/Users/Acer/Desktop/MY%20FILES/Diaz%20%20Kenneth%20Paul%20M/act4DIAz.html">Activity 4</a>:  3 Basic parts of Computer.</li>
-            <li><a href="file:///C:/Users/Acer/Desktop/MY%20FILES/Diaz%20%20Kenneth%20Paul%20M/act5DIAZ.html">Activity 5</a>  :TV Schedules.</li>
-            <li><a href="file:///C:/Users/Acer/Desktop/MY%20FILES/Diaz%20%20Kenneth%20Paul%20M/act6DIAZ.html">Activity 6</a>:  HTML Form.</li>
-            <li><a href="file:///C:/Users/Acer/Desktop/MY%20FILES/Diaz%20%20Kenneth%20Paul%20M/act7DIAZ.html">Activity 7</a>:  Tourists Spots.</li>
+            <li><a href="https://github.com/Kediff/Kenpauldiaz/blob/main/act1DIAZ.html">Activity 1</a>:  Personal Information.</li>
+            <li><a href="https://github.com/Kediff/Kenpauldiaz/blob/main/act2DIAZ.html
+">Activity 2</a>:  Curriculum Vitae .</li>
+            <li><a href="https://github.com/Kediff/Kenpauldiaz/blob/main/act3DIAZ.html
+">Activity 3</a>:  HTML Tutorial.</li>
+            <li><a href="https://github.com/Kediff/Kenpauldiaz/blob/main/act4DIAz.html">Activity 4</a>:  3 Basic parts of Computer.</li>
+            <li><a href=" https://github.com/Kediff/Kenpauldiaz/blob/main/act5DIAZ.html
+">Activity 5</a>  :TV Schedules.</li>
+            <li><a href="https://github.com/Kediff/Kenpauldiaz/blob/main/act6DIAZ.html">Activity 6</a>:  HTML Form.</li>
+            <li><a href="https://github.com/Kediff/Kenpauldiaz/blob/main/act7DIAZ.html
+">Activity 7</a>:  Tourists Spots.</li>
        </ol>
     </div>
 
