--- a/index.html
+++ b/index.html
@@ -64,13 +64,19 @@
         <h1>Compiled Activities</h1>
 
         <ol>
-            <li><a href="https://kediff.github.io/Kenpauldiaz/act1DIAZ.html">Activity 1</a>:  Personal Information.</li>
-<li><a href="https://kediff.github.io/Kenpauldiaz/act2DIAZ.html">Activity 2</a>:  Curriculum Vitae.</li>
-<li><a href="https://kediff.github.io/Kenpauldiaz/act3DIAZ.html">Activity 3</a>:  HTML Tutorial.</li>
-<li><a href="https://kediff.github.io/Kenpauldiaz/act4DIAz.html">Activity 4</a>:  3 Basic parts of Computer.</li>
-<li><a href="https://kediff.github.io/Kenpauldiaz/act5DIAZ.html">Activity 5</a>:  TV Schedules.</li>
-<li><a href="https://kediff.github.io/Kenpauldiaz/act6DIAZ.html">Activity 6</a>:  HTML Form.</li>
-<li><a href="https://kediff.github.io/Kenpauldiaz/act7DIAZ.html">Activity 7</a>:  Tourists Spots.</li>
+            <li>
+    <a href="https://github.com/Kediff/Kenpauldiaz/act1DIAZ.html">Activity 1</a>:  Personal Information.</li>
+<li><a href="https://github.com/Kediff/Kenpauldiaz/act2DIAZ.html
+">Activity 2</a>:  Curriculum Vitae.</li>
+<li><a href="https://github.com/Kediff/Kenpauldiaz/act3DIAZ.html
+">Activity 3</a>:  HTML Tutorial.</li>
+<li><a href="https://github.com/Kediff/Kenpauldiaz/act4DIAz.html">Activity 4</a>:  3 Basic parts of Computer.</li>
+<li><a href="https://github.com/Kediff/Kenpauldiaz/act5DIAZ.html
+">Activity 5</a>:  TV Schedules.</li>
+<li><a href="https://github.com/Kediff/Kenpauldiaz/act6DIAZ.html
+">Activity 6</a>:  HTML Form.</li>
+<li><a href="https://github.com/Kediff/Kenpauldiazact7DIAZ.html
+">Activity 7</a>:  Tourists Spots.</li>
 
        </ol>
     </div>
