--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <ol>
             <li>
-    <a href="https://github.com/Kediff/Kenpauldiaz/act1DIAZ.html">Activity 1</a>:  Personal Information.</li>
+    <a href="https://kediff.github.io/Kenpauldiaz/act1DIAZ.html">Activity 1</a>:  Personal Information.</li>
 <li><a href="https://github.com/Kediff/Kenpauldiaz/act2DIAZ.html
 ">Activity 2</a>:  Curriculum Vitae.</li>
 <li><a href="https://github.com/Kediff/Kenpauldiaz/act3DIAZ.html
